--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,7 @@
+
 # render.yaml
 services:
-  - type: webservice
+  - type: web
     name: romapp-backend
     env: node
     branch: main
@@ -13,7 +14,7 @@ services:
           name: atlas-credentials
           key: MONGODB_URI
 
-  - type: static_site
+  - type: static
     name: romapp-frontend
     env: static
     branch: main
