--- a/render.yaml
+++ b/render.yaml
@@ -10,6 +10,4 @@ services:
     startCommand: node index.js
     envVars:
       - key: MONGODB_URI
-        fromDatabase:
-          name: atlas-credentials
-          key: MONGODB_URI
+        value: mongodb+srv://dafers142:Vbek3WwbR33GkUhn@cluster0.egzp2bc.mongodb.net/romapp?retryWrites=true&w=majority
