--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
-// package.json (ejemplo mínimo)
+
 {
-  "name": "romapp",
+  "name": "romapp-backend",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "build": "echo \"No frontend configurado\""
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^7.3.4",
-    "cors": "^2.8.5",
-    "body-parser": "^1.20.2"
+    "mongodb": "^5.7.0"
   }
 }
