--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,3 @@
-
-# render.yaml
 services:
   - type: web
     name: romapp-backend
@@ -10,4 +8,4 @@ services:
     startCommand: node index.js
     envVars:
       - key: MONGODB_URI
-        value: mongodb+srv://da...
+        value: mongodb+srv://<tu-URI>
